--- a/ctdata/static/ctdata/sass/partials/_flexbox.scss
+++ b/ctdata/static/ctdata/sass/partials/_flexbox.scss
@@ -19,6 +19,7 @@
     box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 
     .service-block {
+      width: 100%;
       h3 {
         font-weight: bold;
         text-align: center;
